fix code scrollbar bug

--- a/src/less/book.less
+++ b/src/less/book.less
@@ -55,6 +55,9 @@ html {
     }
     pre {
         padding-top: 34px;
+        >code {
+            white-space: pre-wrap;
+        }
     }
 
     table {
